# bit-rag

./: .dockerignore  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
.github/workflows/: audit.yml  docker.yml  format.yml  lint.yml  test.yml
docs/: README.md  openapi.yml
src/: main.py
test/: test_main.py
