[project]
name = "bit-rag"
version = "0.1.0"
description = "RAG API using FastAPI, LangChain, ChromaDB, and Ollama"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-chroma>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pip-audit>=2.7.0",
    "taskipy>=1.13.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.uv]
cache-dir = ".uv-cache"

[tool.taskipy.tasks]
dev    = "uvicorn src.main:app --reload"
test   = "pytest"
testv  = "pytest -v"
lint   = "ruff check ."
fmt    = "ruff format ."
audit  = "pip-audit"
sync   = "uv sync --all-extras --dev"
